# rennai-lp-opt-m9-3

./: .gitignore  codex_prompt_meta_compliance.md  contents.md  index.html  script.js  styles.css  thanks.html  thanks.js
.github/workflows/: deploy.yml
Wordpress/affinger-to-swell-migration/: CONVERSION_TABLE.md  FILE_GUIDE.md  README.md  SHORTCODE_ANALYSIS_REPORT.md  (+4 more)
automation/: -  .gitignore  README.md  arkadia_bank_data.csv  arkadia_config.yml  arkadia_集計結果.csv  arkadia_集計結果_修正版.csv  config.yml  pyproject.toml  requirements.txt  sample_data.csv  simple_arkadia_config.yml  集計結果.csv
automation/config/: schema.yaml
automation/src/acccli/: cli.py  config.py  core.py  io.py
automation/src/acccli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
automation/src/arkadia_bookkeeping/: aggregate.py  cli.py  ingest_excel.py  ingest_pdf.py  normalize.py  outputs.py  rules.py
automation/src/arkadia_bookkeeping/utils/: logger.py
automation/tests/: test_aggregate.py  test_cli.py  test_core.py  test_rules.py
codex/: .codex-config.template.json  .gitignore  README.md  package.json
docling-main/: convert_all_pdfs.py  convert_pdf_easyocr.py  convert_specific_pdfs.py
kindle MarkItDown/: 使い方.md
kindle markdown/: Simple Marketing For Smart Peop - Billy Broas.md  セールスコピー大-easyocr.md  ポチらせる文 術-easyocr.md  売れるコピーライティング単語帖 探しているフレーズが ず見つかる言葉のアイデア2000-easyocr.md
kindle transcription/: .env.sample  .gitignore  README.md  cleaning.py  docs_drive.py  main.py  naming.py  ocr.py  requirements.txt
kindle transcription v2/: kindle_ocr_to_drive.py
(+152 files in other folders)
